<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_tambah_edit_pengumuman"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.ezraaudivano.kostku.ui.pengumuman.TambahEditPengumuman">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="91dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/icon"></ImageView>

        <TextView
            android:id="@+id/tvTambahEditPengumuman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="50dp"
            android:text="FORM PENGUMUMAN"
            android:textStyle="bold"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/judulPengumumanLayout"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                app:errorEnabled="true"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etJudul"
                    android:layout_width="match_parent"
                    android:hint="Judul Pengumuman"
                    android:layout_height="match_parent"
                    android:autofillHints=""
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/subJudulPengumumanLayout"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                app:errorEnabled="true"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSubjudul"
                    android:layout_width="match_parent"
                    android:hint="Subjudul Pengumuman"
                    android:layout_height="match_parent"
                    android:autofillHints=""
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/kontenPengumumanLayout"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                app:errorEnabled="true"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etKonten"
                    android:layout_width="match_parent"
                    android:hint="Konten Pengumuman"
                    android:layout_height="match_parent"
                    android:autofillHints=""
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBatal"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Batal"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:background="@drawable/sp_button"
                app:cornerRadius="5dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSimpan"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Simpan"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:background="@drawable/sp_button"
                app:cornerRadius="5dp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>