...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greenHeader"
    android:id="@+id/frame_view_pengumuman"
    tools:context="com.ezraaudivano.kostku.ui.pengumuman.PengumumanFragment">


    <TextView
        android:id="@+id/tvPengumuman"
        android:layout_width="wrap_content"
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/pastelGreen"
            android:padding="5dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAdd"
            android:backgroundTint="@color/colorPrimary"
            app:borderWidth="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="15dp"
...
