<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:title="KostKu" >

            <menu>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_baseline_house_24"
                    android:title="KostKu" />
                <item
                    android:id="@+id/nav_pengumuman"
                    android:icon="@drawable/ic_baseline_announcement_24"
                    android:title="Pengumuman" />
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/ic_baseline_people_alt_24"
                    android:title="About Us" />
                <item
                    android:id="@+id/nav_pdf"
                    android:icon="@drawable/ic_baseline_file"
                    android:title="File" />
            </menu>
        </item>

    </group>


    <item android:title="Account">
        <menu>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_exit_to_app_24"
                android:title="Logout" />
        </menu>
    </item>
</menu>